--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,12 @@
         android:onClick="launchHistory"
         android:text="History"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/favorite_button"
+        android:onClick="launchFavorite"
+        android:text="Favorite"
+        app:layout_constraintLeft_toRightOf="@id/history_button"/>
+
 </android.support.constraint.ConstraintLayout>
