--- a/app/src/main/res/layout/list_item_textbook.xml
+++ b/app/src/main/res/layout/list_item_textbook.xml
@@ -12,4 +12,12 @@
         android:layout_weight="1"
         android:layout_centerInParent="true"/>
 
+    <Button
+        android:id="@+id/delete_history"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:focusable="false"
+        android:text="del" />
+
 </LinearLayout>
