--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -24,11 +24,11 @@
 
     <Button
         android:id="@+id/favorite"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:focusable="false"
-        android:text="fav" />
+        android:background="@android:drawable/btn_star"
+        android:focusable="auto"
+        android:text="" />
 
     <!--<Button-->
         <!--android:id="@+id/delete"-->
