--- a/app/src/main/res/layout/activity_results_activity.xml
+++ b/app/src/main/res/layout/activity_results_activity.xml
@@ -11,6 +11,8 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/colorBackgroundFloating"
+        android:cacheColorHint="@android:color/background_light"
         android:orientation="vertical" />
 
     <TextView
@@ -18,7 +20,10 @@
         style=""
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center" />
+        android:fontFamily="monospace"
+        android:gravity="center"
+        android:textAllCaps="false"
+        android:textSize="18sp" />
 
     <ProgressBar
         android:id="@+id/bar"
