--- a/app/src/main/res/layout/activity_barcode_scanner.xml
+++ b/app/src/main/res/layout/activity_barcode_scanner.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BarcodeScanner">
+    tools:context=".BarcodeScanner"
+    android:background="@android:color/black">
 
     <LinearLayout
         android:id="@+id/topLayout"
