added styling to favorites and history page

--- a/app/src/main/res/layout/list_item_favorite.xml
+++ b/app/src/main/res/layout/list_item_favorite.xml
@@ -24,10 +24,14 @@
 
     <Button
         android:id="@+id/delete"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:focusable="false"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/colorAccent"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
         android:text="del" />
 
 </LinearLayout>
