--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <Button
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:onClick="launchBarcode"
         android:text="Barcode Scanner"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="@color/colorAccent"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="launchHistory"
-        android:text="History" />
+        android:text="History"
+        />
 
     <Button
         android:id="@+id/favorite_button"
