--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,30 +3,37 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
     android:orientation="horizontal">
-
+<!-- Info displayed for the vendor name -->
     <TextView
         android:id="@+id/vendor_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
+        android:layout_weight="1"
+        android:fontFamily="sans-serif-condensed"
+        />
+    <!-- Info displayed for the vendor condition -->
     <TextView
         android:id="@+id/condition"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
+        android:layout_weight="1"
+        android:fontFamily="sans-serif-condensed"
+        />
+    <!-- Info displayed for the vendor price -->
     <TextView
         android:id="@+id/price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        />
 
+    <!-- Info displayed for the vendor  -->
     <Button
         android:id="@+id/favorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_star"
+        android:layout_width="80dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/star_image"
         android:focusable="auto"
         android:text="" />
 
