--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,7 +6,7 @@
 <!-- Info displayed for the vendor name -->
     <TextView
         android:id="@+id/vendor_name"
-        android:layout_marginTop="30dp"
+        android:layout_gravity="center_vertical"
         android:textSize="15dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -15,7 +15,7 @@
     <!-- Info displayed for the vendor condition -->
     <TextView
         android:id="@+id/condition"
-        android:layout_marginTop="30dp"
+        android:layout_gravity="center_vertical"
         android:textSize="15dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
     <!-- Info displayed for the vendor price -->
     <TextView
         android:id="@+id/price"
-        android:layout_marginTop="30dp"
+        android:layout_gravity="center_vertical"
         android:textSize="15dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
         android:id="@+id/favorite"
         android:layout_width="50dp"
         android:layout_height="45dp"
-        android:layout_marginTop="30dp"
+        android:layout_gravity="center_vertical"
         android:layout_marginRight="10dp"
         android:background="@drawable/star_on"
         android:focusable="false"
