--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,17 +6,20 @@
 <!-- Info displayed for the vendor name -->
     <TextView
         android:id="@+id/vendor_name"
+        android:textStyle="bold"
         android:layout_gravity="center_vertical"
-        android:textSize="15dp"
+        android:textSize="13dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginLeft="2dp"
         />
     <!-- Info displayed for the vendor condition -->
     <TextView
         android:id="@+id/condition"
+        android:textStyle="bold"
         android:layout_gravity="center_vertical"
-        android:textSize="15dp"
+        android:textSize="13dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -25,8 +28,9 @@
     <!-- Info displayed for the vendor price -->
     <TextView
         android:id="@+id/price"
+        android:textStyle="bold"
         android:layout_gravity="center_vertical"
-        android:textSize="15dp"
+        android:textSize="13dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -38,7 +42,7 @@
         android:layout_width="50dp"
         android:layout_height="45dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="12dp"
         android:background="@drawable/star_on"
         android:focusable="false"
         android:text="" />
