--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -11,6 +11,8 @@
         android:id="@+id/list_view_favorite"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/colorBackgroundFloating"
+        android:cacheColorHint="@android:color/background_light"
         android:orientation="vertical" />
 
     <TextView
