--- a/app/src/main/res/layout/list_item_favorite.xml
+++ b/app/src/main/res/layout/list_item_favorite.xml
@@ -6,7 +6,8 @@
 
     <TextView
         android:id="@+id/vendor_name_favorite"
-        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textSize="13dp"
         android:layout_marginTop="40dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -14,7 +15,8 @@
 
     <TextView
         android:id="@+id/condition_favorite"
-        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textSize="13dp"
         android:layout_marginTop="40dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -22,7 +24,8 @@
 
     <TextView
         android:id="@+id/price_favorite"
-        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textSize="13dp"
         android:layout_marginTop="40dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -30,8 +33,8 @@
 
     <Button
         android:id="@+id/delete"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/delete_icon"
