added launcher icon + edited header

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,7 +11,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/constrHist">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbarHist"
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="invisible"
-        app:layout_constraintCircle="@id/parent_history"
+        app:layout_constraintCircle="@id/constrHist"
         app:layout_constraintCircleRadius="0dp"/>
 
     </android.support.constraint.ConstraintLayout>
