--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,12 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
     android:orientation="horizontal">
+
 <!-- Info displayed for the vendor name -->
     <TextView
         android:id="@+id/vendor_name"
+        android:padding="5dp"
         android:textStyle="bold"
         android:layout_gravity="center_vertical"
-        android:textSize="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="12dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -16,9 +19,11 @@
     <!-- Info displayed for the vendor condition -->
     <TextView
         android:id="@+id/condition"
+        android:padding="30dp"
         android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:layout_gravity="center_vertical"
-        android:textSize="10dp"
+        android:textSize="12dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -27,9 +32,11 @@
     <!-- Info displayed for the vendor price -->
     <TextView
         android:id="@+id/price"
+        android:padding="20dp"
+        android:textColor="@android:color/black"
         android:textStyle="bold"
         android:layout_gravity="center_vertical"
-        android:textSize="13dp"
+        android:textSize="12dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -38,8 +45,8 @@
     <!-- Info displayed for the vendor  -->
     <Button
         android:id="@+id/favorite"
-        android:layout_width="50dp"
-        android:layout_height="45dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="12dp"
         android:background="@drawable/star_on"
