--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,14 +11,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="?attr/colorBackgroundFloating"
-        android:cacheColorHint="@android:color/background_light"
-        android:dividerHeight='1dp'
-        android:divider="@color/design_default_color_primary_dark"
-        android:id="@+id/constrHist"
-       >
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbarHist"
@@ -42,21 +35,20 @@
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/toolbarHist" />
 
-    <TextView
-        android:id="@+id/empty_state_history"
-        style=""
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center" />
-
-    <ProgressBar
-        android:id="@+id/bar_history"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="invisible"
-        app:layout_constraintCircle="@id/constrHist"
-        app:layout_constraintCircleRadius="0dp"/>
+        <TextView
+            android:id="@+id/empty_state_history"
+            style=""
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center" />
+        <ProgressBar
+            android:id="@+id/bar_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            app:layout_constraintCircle="@id/parent_history"
+            app:layout_constraintCircleRadius="0dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
