--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,43 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@android:color/background_light"
     tools:context=".MainActivity">
 
+    <!-- This is the button to launch barcode scanner/camera -->
     <Button
         android:id="@+id/barcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:drawable="@color/colorPrimary"
+        android:drawableTop="@drawable/barcode"
         android:onClick="launchBarcode"
-        android:text="Barcode Scanner"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="@color/colorAccent"
+        android:text="@string/barcode"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.29" />
+
+    <!-- This is the button to launch the history activity -->
 
     <Button
         android:id="@+id/history_button"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="@color/colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:drawable="@color/colorPrimary"
+        android:drawableTop="@drawable/recent"
         android:onClick="launchHistory"
-        android:text="History"
-        />
+        android:text="@string/history"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.619" />
+
+    <!-- This is the button to launch the favorite results-->
 
     <Button
         android:id="@+id/favorite_button"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="@color/colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/favorite"
         android:onClick="launchFavorite"
-        android:text="Favorite"
-        app:layout_constraintLeft_toRightOf="@id/history_button" />
+        android:text="@string/favorites"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintLeft_toRightOf="@id/history_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.619" />
 
 </android.support.constraint.ConstraintLayout>
