--- a/app/src/main/res/layout/list_item_favorite.xml
+++ b/app/src/main/res/layout/list_item_favorite.xml
@@ -6,27 +6,33 @@
 
     <TextView
         android:id="@+id/vendor_name_favorite"
+        android:padding="5dp"
         android:textStyle="bold"
-        android:textSize="13dp"
-        android:layout_marginTop="40dp"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center_vertical"
+        android:textSize="12dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <TextView
         android:id="@+id/condition_favorite"
+        android:padding="30dp"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center_vertical"
         android:textStyle="bold"
-        android:textSize="13dp"
-        android:layout_marginTop="40dp"
+        android:textSize="12dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <TextView
         android:id="@+id/price_favorite"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center_vertical"
         android:textStyle="bold"
-        android:textSize="13dp"
-        android:layout_marginTop="40dp"
+        android:padding="20dp"
+        android:textSize="12dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
@@ -35,7 +41,7 @@
         android:id="@+id/delete"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginTop="40dp"
+        android:layout_gravity="center_vertical"
         android:layout_marginRight="20dp"
         android:background="@drawable/delete_icon"
         android:focusable="false"
