--- a/app/src/main/res/layout/list_item_textbook.xml
+++ b/app/src/main/res/layout/list_item_textbook.xml
@@ -8,10 +8,12 @@
     <TextView
         android:id="@+id/text_name"
         android:textStyle="bold"
-        android:textSize="13dp"
+        android:padding="5dp"
+        android:textSize="12dp"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center_vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_centerInParent="true"
         android:layout_weight="1" />
 
@@ -19,7 +21,7 @@
         android:id="@+id/delete_history"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="15dp"
         android:layout_gravity="center_vertical"
         android:background="@drawable/delete_icon"
         android:focusable="false"
