--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -11,14 +11,23 @@
             android:id="@+id/barcode"
             android:icon="@drawable/ic_barcode_icon"
             android:title="@string/barcode_scanner"/>
+
+        <item
+            android:id="@+id/title_search"
+            android:icon="@drawable/ic_search_black_24dp"
+            android:title="@string/title_search"/>
+
         <item
             android:id="@+id/history_button"
             android:icon="@drawable/ic_history_black_24dp"
             android:title="@string/book_history"/>
+
         <item
             android:id="@+id/favorite_button"
             android:icon="@drawable/ic_star_black_24dp"
             android:title="@string/favorites_nav"/>
+
+
     </group>
 
 </menu>
