changed color scheme, name of app, not all pages look same, need to make a few more adjustments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
     <!-- This is the button to launch barcode scanner/camera -->
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:drawable="@color/colorPrimary"
-        android:drawableTop="@drawable/barcode"
+        android:drawableTop="@drawable/barcode2"
+        android:textColor="@android:color/white"
         android:onClick="launchBarcode"
         android:text="@string/barcode"
         android:visibility="visible"
@@ -32,10 +33,10 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:drawable="@color/colorPrimary"
-        android:drawableTop="@drawable/recent"
+        android:drawableTop="@drawable/ic_history_blue_600_36dp"
+        android:textColor="@android:color/white"
         android:onClick="launchHistory"
         android:text="@string/history"
-        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
@@ -51,10 +52,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:background="@android:color/transparent"
-        android:drawableTop="@drawable/favorite"
+        android:drawableTop="@drawable/ic_grade_blue_600_36dp"
+        android:textColor="@android:color/white"
         android:onClick="launchFavorite"
         android:text="@string/favorites"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.175"
