--- a/app/src/main/res/layout/list_item_textbook.xml
+++ b/app/src/main/res/layout/list_item_textbook.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
     android:baselineAligned="false"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/colorSecondary"
+    >
 
     <TextView
         android:id="@+id/text_name"
@@ -19,11 +21,11 @@
 
     <Button
         android:id="@+id/delete_history"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginRight="15dp"
         android:layout_gravity="center_vertical"
-        android:background="@drawable/delete_icon"
+        android:background="@drawable/ic_remove_circle_red_500_24dp"
         android:focusable="false"
         android:text=""
         />
