--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ResultsActivity"
-    android:id="@+id/parent_history">
+    android:id="@+id/parent_history"
+    android:background="@color/colorSecondary" >
 
 
 
@@ -33,6 +34,8 @@
             android:layout_height="461dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:dividerHeight="3dp"
+            android:divider="@color/colorPrimaryDark"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/toolbarHist" />
 
