--- a/app/src/main/res/layout/activity_results_activity.xml
+++ b/app/src/main/res/layout/activity_results_activity.xml
@@ -11,8 +11,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:cacheColorHint="@color/colorPrimary"
         android:background="?attr/colorBackgroundFloating"
-        android:cacheColorHint="@android:color/background_light"
         android:orientation="vertical"
         android:dividerHeight='1dp'
         android:divider="@color/design_default_color_primary_dark"
@@ -37,8 +37,8 @@
             android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="510dp"
-            android:dividerHeight="2dp"
-            android:layout_marginTop="8dp"
+            android:dividerHeight="3dp"
+            android:divider="@color/colorPrimaryDark"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
