--- a/app/src/main/res/layout/activity_results_activity.xml
+++ b/app/src/main/res/layout/activity_results_activity.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ResultsActivity"
     android:id="@+id/drawer"
+    android:background="@color/colorSecondary"
     >
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="@color/colorPrimary"
-        android:background="?attr/colorBackgroundFloating"
+        android:background="@color/colorSecondary"
         android:orientation="vertical"
         android:dividerHeight='1dp'
         android:divider="@color/design_default_color_primary_dark"
@@ -37,8 +38,7 @@
             android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="510dp"
-            android:dividerHeight="3dp"
-            android:divider="@color/colorPrimaryDark"
+            android:dividerHeight="2dp"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
