--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
     android:orientation="horizontal"
-    android:background="@android:color/white">
+    android:background="@color/colorSecondary">
 
 <!-- Info displayed for the vendor name -->
     <TextView
