added the name of the text in favorites activity

--- a/app/src/main/res/layout/activity_title_search.xml
+++ b/app/src/main/res/layout/activity_title_search.xml
@@ -40,7 +40,7 @@
             android:layout_marginTop="29dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Title:"
+            android:text="Enter title of book:"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Author:"
+            android:text="Enter Name of author:"
             app:layout_constraintBottom_toTopOf="@+id/enterAuthor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.546"
