--- a/app/src/main/res/layout/list_item_favorite.xml
+++ b/app/src/main/res/layout/list_item_favorite.xml
@@ -7,23 +7,34 @@
     >
 
     <TextView
+        android:id="@+id/text_name"
+        android:padding="5dp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center_vertical"
+        android:textSize="11dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <TextView
         android:id="@+id/vendor_name_favorite"
         android:padding="5dp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
         android:layout_gravity="center_vertical"
-        android:textSize="12dp"
+        android:textSize="11dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <TextView
         android:id="@+id/condition_favorite"
-        android:padding="30dp"
+        android:padding="20dp"
         android:textColor="@android:color/black"
         android:layout_gravity="center_vertical"
         android:textStyle="bold"
-        android:textSize="12dp"
+        android:textSize="11dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
@@ -34,7 +45,7 @@
         android:layout_gravity="center_vertical"
         android:textStyle="bold"
         android:padding="20dp"
-        android:textSize="12dp"
+        android:textSize="11dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
