--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -2,10 +2,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="108dp"
         android:height="108dp"
-        android:viewportWidth="104.85437"
-        android:viewportHeight="104.85437">
-    <group android:translateX="-1.5728155"
-            android:translateY="-1.5728155">
+        android:viewportWidth="96.42857"
+        android:viewportHeight="96.42857">
+    <group android:translateX="-5.785714"
+            android:translateY="-5.785714">
         <path android:fillColor="#008577"
               android:pathData="M0,0h108v108h-108z"/>
         <path android:fillColor="#00000000" android:pathData="M9,0L9,108"
