--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,12 +72,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/title_search"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/ic_search_blue_600_36dp"
         android:onClick="launchTitleSearch"
+        android:text="@string/title_search"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/barcode"
-        app:layout_constraintVertical_bias="0.777" />
+        app:layout_constraintVertical_bias="0.616" />
 
 </android.support.constraint.ConstraintLayout>
