--- a/app/src/main/res/layout/activity_title_search.xml
+++ b/app/src/main/res/layout/activity_title_search.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".TitleSearchActivity"
     android:id="@+id/drawer_titleSearch"
+
     >
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/colorBackgroundFloating"
-        android:cacheColorHint="@android:color/background_light"
+        android:background="@color/colorSecondary"
+        android:cacheColorHint="@color/colorSecondary"
         android:orientation="vertical"
         android:dividerHeight='1dp'
         android:divider="@color/design_default_color_primary_dark"
@@ -34,14 +35,15 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="53dp"
-            android:layout_height="31dp"
+            android:layout_width="79dp"
+            android:layout_height="36dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="29dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:text="Title:"
             android:textSize="18sp"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +75,7 @@
             android:layout_marginBottom="8dp"
             android:text="Author:"
             android:textSize="18sp"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/enterAuthor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
